--- a/package.json
+++ b/package.json
@@ -12,17 +12,36 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^4.1.3",
+    "@lexical/react": "^0.29.0",
     "@splidejs/splide": "^4.1.4",
     "@splidejs/splide-extension-auto-scroll": "^0.5.3",
     "@tailwindcss/vite": "^4.0.14",
+    "@tiptap/extension-color": "^2.11.7",
+    "@tiptap/extension-image": "^2.11.7",
+    "@tiptap/extension-link": "^2.11.7",
+    "@tiptap/extension-table": "^2.11.7",
+    "@tiptap/extension-table-cell": "^2.11.7",
+    "@tiptap/extension-table-header": "^2.11.7",
+    "@tiptap/extension-table-row": "^2.11.7",
+    "@tiptap/extension-text-align": "^2.11.7",
+    "@tiptap/extension-text-style": "^2.11.7",
+    "@tiptap/extension-underline": "^2.11.7",
+    "@tiptap/react": "^2.11.7",
+    "@tiptap/starter-kit": "^2.11.7",
     "axios": "^1.8.4",
     "firebase": "^11.4.0",
+    "jwt-decode": "^4.0.0",
+    "lexical": "^0.29.0",
+    "quill": "^2.0.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
+    "react-quilljs": "^2.0.5",
     "react-router-dom": "^7.3.0",
+    "slate": "^0.112.0",
+    "slate-react": "^0.112.1",
     "zod": "^3.24.2"
   },
   "devDependencies": {
