--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "@tiptap/starter-kit": "^2.11.7",
     "axios": "^1.8.4",
     "firebase": "^11.4.0",
+    "jodit-pro-react": "^5.2.25",
+    "jodit-react": "^5.2.18",
     "jwt-decode": "^4.0.0",
     "lexical": "^0.29.0",
     "quill": "^2.0.3",
